# secunda_test_app

./: .flake8  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py
app/models/: base.py  db_helper.py  office.py
backend/: app.py  config.py  main.py  security.py
backend/di/: __init__.py  di.py
backend/models/: __init__.py  activity.py  base.py  office.py  organizations.py  phone.py
backend/repository/: __init__.py  organization_repository.py
backend/routers/: __init__.py  exception_container.py  organization.py
backend/schemas/: organizations.py
backend/services/: __init__.py  db_helper.py
backend/usecase/: __init__.py  exceptions.py  organization.py
migration/: env.py  script.py.mako
migration/versions/: 2025_07_04_0043-8ab5d2dc378b_initial.py
